--- a/test.html
+++ b/test.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
     <link href="./test.css" rel="stylesheet">
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello hello hello! Hello hello hello! Hello hello hello! Hello hello hello! Hello hello hello!</h1>
+    <div id="name-plate">
+        <div id="name">
+            <h1>&nbsp&nbsp
+                <span id="intro">Hello, I'm</span>
+                <br>
+                <span id="name">Elena Brosseau</span>
+            </h1>
+        </div>
+        <div id="shapes">
+            <div id="square"></div>
+            <div id="circle" class="circle-one"></div>
+            <div id="triangle"></div>
+            <div id="hexagon"></div>
+            <div id="circle" class="circle-two"></div>
+        </div>
+    </div>
 </body>
 </html>
