--- a/test.html
+++ b/test.html
@@ -25,5 +25,64 @@
             <div id="circle" class="circle-two"></div>
         </div>
     </div>
+    <div id="windows">
+        <div class="window one">
+            <div class="nav-bar">
+                <div class="circles">
+                    <div class="circle red"></div>
+                    <div class="circle yellow"></div>
+                    <div class="circle green"></div>
+                </div>
+                <div class="search-bar">
+                    <p>https://www.gonzo.com</p>
+                </div>
+                <div class="menu">
+                    <div class="menu-bar"></div>
+                    <div class="menu-bar"></div>
+                    <div class="menu-bar"></div>
+                </div>
+            </div>
+            <div class="window-content">
+            </div>
+        </div>
+        <div class="window two">
+            <div class="nav-bar">
+                <div class="circles">
+                    <div class="circle red"></div>
+                    <div class="circle yellow"></div>
+                    <div class="circle green"></div>
+                </div>
+                <div class="search-bar">
+                    <p>https://www.gonzo.com</p>
+                </div>
+                <div class="menu">
+                    <div class="menu-bar"></div>
+                    <div class="menu-bar"></div>
+                    <div class="menu-bar"></div>
+                </div>
+            </div>
+            <div class="window-content">
+            </div>
+        </div>
+        <div class="window three">
+            <div class="nav-bar">
+                <div class="circles">
+                    <div class="circle red"></div>
+                    <div class="circle yellow"></div>
+                    <div class="circle green"></div>
+                </div>
+                <div class="search-bar">
+                    <p>https://www.gonzo.com</p>
+                </div>
+                <div class="menu">
+                    <div class="menu-bar"></div>
+                    <div class="menu-bar"></div>
+                    <div class="menu-bar"></div>
+                </div>
+            </div>
+            <div class="window-content">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
