hello added windows

--- a/test.html
+++ b/test.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="./test.css" rel="stylesheet">
     <title>Test</title>
 </head>
 <body>
+    <header>
+        <!--<h2>portfolio</h2>
+        <h2>contact</h2>-->
+    </header>
     <div id="name-plate">
         <div id="name">
             <h1>&nbsp&nbsp
