absolute, website image

--- a/test.html
+++ b/test.html
@@ -9,10 +9,10 @@
     <title>Test</title>
 </head>
 <body>
-    <header>
+    <!--<header>
         <!--<h2>portfolio</h2>
-        <h2>contact</h2>-->
-    </header>
+        <h2>contact</h2>
+    </header>-->
     <div id="name-plate">
         <div id="name">
             <h1>&nbsp&nbsp
@@ -85,6 +85,12 @@
                 </div>
             </div>
             <div class="window-content">
+                <!--<h2>I'm a Front End 
+                    <br>
+                    <span id="dev">
+                        Web Developer
+                    </span>
+                </h2>-->
             </div>
         </div>
     </div>
