--- a/index.html
+++ b/index.html
@@ -9,19 +9,81 @@
     <title>Name Plate</title>
 </head>
 <body>
-    <div id="name-plate">
-        <h1>
-            &nbsp&nbsp
-            <span id="intro">Hello, I'm</span>
-            <br>
-            <span id="name">Elena Brosseau</span>
-        </h1>
-        <div id="shapes">
-            <div id="square"></div>
-            <div id="circle" class="circle-one"></div>
-            <div id="triangle"></div>
-            <div id="hexagon"></div>
-            <div id="circle" class="circle-two"></div>
+    <div id="grid">
+        <div id="name-plate">
+            <div id="name-text">
+                <p id="hello">Hello, I'm</p>
+                <h1>Elena Brosseau</h1>
+                <p id="front-end">Front End</p>
+                <p id="web-dev">Web Developer</p>
+            </div>
+            <div id="shapes">
+                <div id="square"></div>
+                <div id="circle-one"></div>
+                <div id="triangle"></div>
+                <div id="hexagon"></div>
+                <div id="circle-two"></div>
+            </div>
+        </div>
+        <div id="window-container">
+            <div id="windows">
+                <div class="window one">
+                    <div class="nav-bar">
+                        <div class="browser-btns">
+                            <div class="browser-btn red"></div>
+                            <div class="browser-btn yellow"></div>
+                            <div class="browser-btn green"></div>
+                        </div>
+                        <div class="search-bar">
+                            <p>https://www.gonzo.com</p>
+                        </div>
+                        <div class="menu">
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                        </div>
+                    </div>
+                    <div class="window-content">
+                    </div>
+                </div>
+                <div class="window two">
+                    <div class="nav-bar">
+                        <div class="browser-btns">
+                            <div class="browser-btn red"></div>
+                            <div class="browser-btn yellow"></div>
+                            <div class="browser-btn green"></div>
+                        </div>
+                        <div class="search-bar">
+                            <p>https://www.gonzo.com</p>
+                        </div>
+                        <div class="menu">
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                        </div>
+                    </div>
+                    <div class="window-content">
+                    </div>
+                </div>
+                <div class="window three">
+                    <div class="nav-bar">
+                        <div class="browser-btns">
+                            <div class="browser-btn red"></div>
+                            <div class="browser-btn yellow"></div>
+                            <div class="browser-btn green"></div>
+                        </div>
+                        <div class="search-bar">
+                            <p>https://www.HelloGonzo.github.io</p>
+                        </div>
+                        <div class="menu">
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                            <div class="menu-bar"></div>
+                        </div>
+                    </div>
+                    <div class="window-content"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
