--- a/test.html
+++ b/test.html
@@ -90,14 +90,7 @@
                             <div class="menu-bar"></div>
                         </div>
                     </div>
-                    <div class="window-content">
-                        <!--<h2>I'm a Front End 
-                            <br>
-                            <span id="dev">
-                                Web Developer
-                            </span>
-                        </h2>-->
-                    </div>
+                    <div class="window-content"></div>
                 </div>
             </div>
         </div>
