layout complete and fully responsive

--- a/index.html
+++ b/index.html
@@ -6,85 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
-    <title>Name Plate</title>
+    <title>Portfolio Working</title>
 </head>
 <body>
-    <div id="grid">
-        <div id="name-plate">
-            <div id="name-text">
-                <p id="hello">Hello, I'm</p>
-                <h1>Elena Brosseau</h1>
-                <p id="front-end">Front End</p>
-                <p id="web-dev">Web Developer</p>
+    <main>
+        <div id="grid">
+            <div id="name-plate">
+                <div id="name-text">
+                    <p id="hello">Hello, I'm</p>
+                    <h1>Elena Brosseau</h1>
+                    <p id="front-end">Front End</p>
+                    <p id="web-dev">Web Developer</p>
+                </div>
+                <div id="shapes">
+                    <div id="square"></div>
+                    <div id="circle-one"></div>
+                    <div id="triangle"></div>
+                    <div id="hexagon"></div>
+                    <div id="circle-two"></div>
+                </div>
             </div>
-            <div id="shapes">
-                <div id="square"></div>
-                <div id="circle-one"></div>
-                <div id="triangle"></div>
-                <div id="hexagon"></div>
-                <div id="circle-two"></div>
+            <div id="window-container">
+                <div id="windows">
+                    <div class="window one">
+                        <div class="nav-bar">
+                            <div class="browser-btns">
+                                <div class="browser-btn red"></div>
+                                <div class="browser-btn yellow"></div>
+                                <div class="browser-btn green"></div>
+                            </div>
+                            <div class="search-bar">
+                                <p>https://www.gonzo.com</p>
+                            </div>
+                            <div class="menu">
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                            </div>
+                        </div>
+                        <div class="window-content">
+                        </div>
+                    </div>
+                    <div class="window two">
+                        <div class="nav-bar">
+                            <div class="browser-btns">
+                                <div class="browser-btn red"></div>
+                                <div class="browser-btn yellow"></div>
+                                <div class="browser-btn green"></div>
+                            </div>
+                            <div class="search-bar">
+                                <p>https://www.gonzo.com</p>
+                            </div>
+                            <div class="menu">
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                            </div>
+                        </div>
+                        <div class="window-content">
+                        </div>
+                    </div>
+                    <div class="window three">
+                        <div class="nav-bar">
+                            <div class="browser-btns">
+                                <div class="browser-btn red"></div>
+                                <div class="browser-btn yellow"></div>
+                                <div class="browser-btn green"></div>
+                            </div>
+                            <div class="search-bar">
+                                <p>https://www.HelloGonzo.github.io</p>
+                            </div>
+                            <div class="menu">
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                            </div>
+                        </div>
+                        <div class="window-content"></div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="window-container">
-            <div id="windows">
-                <div class="window one">
-                    <div class="nav-bar">
-                        <div class="browser-btns">
-                            <div class="browser-btn red"></div>
-                            <div class="browser-btn yellow"></div>
-                            <div class="browser-btn green"></div>
-                        </div>
-                        <div class="search-bar">
-                            <p>https://www.gonzo.com</p>
-                        </div>
-                        <div class="menu">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                        </div>
-                    </div>
-                    <div class="window-content">
-                    </div>
-                </div>
-                <div class="window two">
-                    <div class="nav-bar">
-                        <div class="browser-btns">
-                            <div class="browser-btn red"></div>
-                            <div class="browser-btn yellow"></div>
-                            <div class="browser-btn green"></div>
-                        </div>
-                        <div class="search-bar">
-                            <p>https://www.gonzo.com</p>
-                        </div>
-                        <div class="menu">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                        </div>
-                    </div>
-                    <div class="window-content">
-                    </div>
-                </div>
-                <div class="window three">
-                    <div class="nav-bar">
-                        <div class="browser-btns">
-                            <div class="browser-btn red"></div>
-                            <div class="browser-btn yellow"></div>
-                            <div class="browser-btn green"></div>
-                        </div>
-                        <div class="search-bar">
-                            <p>https://www.HelloGonzo.github.io</p>
-                        </div>
-                        <div class="menu">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                        </div>
-                    </div>
-                    <div class="window-content"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </main>
 </body>
 </html>
