fixed shapes (imgs)

--- a/test.html
+++ b/test.html
@@ -9,91 +9,84 @@
     <title>Test</title>
 </head>
 <body>
-    <!--<header>
-        <!--<h2>portfolio</h2>
-        <h2>contact</h2>
-    </header>-->
-    <div id="grid-container">
-        <div id="name-plate">
-            <div id="name">
-                <p id="intro">Hello, I'm</p>
-                <h1>Elena Brosseau</h1>
-                <p id="info-one">Front End</p>
-                <p id="info-two">Web Developer</p>
-                <!--<h1>&nbsp&nbsp
-                    <span id="intro">Hello, I'm</span>
-                    <br>
-                    <span id="name">Elena Brosseau</span>
-                </h1>-->
-            </div>
-            <div id="shapes">
-                <div id="square"></div>
-                <div id="circle" class="circle-one"></div>
-                <div id="triangle"></div>
-                <div id="hexagon"></div>
-                <div id="circle" class="circle-two"></div>
-            </div>
-        </div>
-        <div id="window-container">
-            <div id="windows">
-                <div class="window one">
-                    <div class="nav-bar">
-                        <div class="circles">
-                            <div class="circle red"></div>
-                            <div class="circle yellow"></div>
-                            <div class="circle green"></div>
-                        </div>
-                        <div class="search-bar">
-                            <p>https://www.gonzo.com</p>
-                        </div>
-                        <div class="menu">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                        </div>
-                    </div>
-                    <div class="window-content">
-                    </div>
+    <main>
+        <div id="grid">
+            <div id="name-plate">
+                <div id="name-text">
+                    <p id="hello">Hello, I'm</p>
+                    <h1>Elena Brosseau</h1>
+                    <p id="front-end">Front End</p>
+                    <p id="web-dev">Web Developer</p>
                 </div>
-                <div class="window two">
-                    <div class="nav-bar">
-                        <div class="circles">
-                            <div class="circle red"></div>
-                            <div class="circle yellow"></div>
-                            <div class="circle green"></div>
-                        </div>
-                        <div class="search-bar">
-                            <p>https://www.gonzo.com</p>
-                        </div>
-                        <div class="menu">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                        </div>
-                    </div>
-                    <div class="window-content">
-                    </div>
+                <div id="shapes">
+                    <img src="./assets/square.png" class="shape square">
+                    <img src="./assets/yellow-circle.png" class="shape circle yel-circle">
+                    <img src="./assets/triangle.png" class="shape triangle">
+                    <img src="./assets/hex.png" class="shape hexagon">
+                    <img src="./assets/red-circle.png" class="shape circle red-circle">
                 </div>
-                <div class="window three">
-                    <div class="nav-bar">
-                        <div class="circles">
-                            <div class="circle red"></div>
-                            <div class="circle yellow"></div>
-                            <div class="circle green"></div>
+            </div>
+            <div id="window-container">
+                <div id="windows">
+                    <div class="window one">
+                        <div class="nav-bar">
+                            <div class="browser-btns">
+                                <div class="browser-btn red"></div>
+                                <div class="browser-btn yellow"></div>
+                                <div class="browser-btn green"></div>
+                            </div>
+                            <div class="search-bar">
+                                <p>https://www.gonzo.com</p>
+                            </div>
+                            <div class="menu">
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                            </div>
                         </div>
-                        <div class="search-bar">
-                            <p>https://www.HelloGonzo.github.io</p>
-                        </div>
-                        <div class="menu">
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
-                            <div class="menu-bar"></div>
+                        <div class="window-content">
                         </div>
                     </div>
-                    <div class="window-content"></div>
+                    <div class="window two">
+                        <div class="nav-bar">
+                            <div class="browser-btns">
+                                <div class="browser-btn red"></div>
+                                <div class="browser-btn yellow"></div>
+                                <div class="browser-btn green"></div>
+                            </div>
+                            <div class="search-bar">
+                                <p>https://www.gonzo.com</p>
+                            </div>
+                            <div class="menu">
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                            </div>
+                        </div>
+                        <div class="window-content">
+                        </div>
+                    </div>
+                    <div class="window three">
+                        <div class="nav-bar">
+                            <div class="browser-btns">
+                                <div class="browser-btn red"></div>
+                                <div class="browser-btn yellow"></div>
+                                <div class="browser-btn green"></div>
+                            </div>
+                            <div class="search-bar">
+                                <p>https://www.HelloGonzo.github.io</p>
+                            </div>
+                            <div class="menu">
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                                <div class="menu-bar"></div>
+                            </div>
+                        </div>
+                        <div class="window-content"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
