--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <p id="web-dev">Web Developer</p>
                 </div>
                 <div id="shapes">
-                    <div id="square"></div>
-                    <div id="circle-one"></div>
-                    <div id="triangle"></div>
-                    <div id="hexagon"></div>
-                    <div id="circle-two"></div>
+                    <img src="./assets/square.png" class="shape square">
+                    <img src="./assets/yellow-circle.png" class="shape circle yel-circle">
+                    <img src="./assets/triangle.png" class="shape triangle">
+                    <img src="./assets/hex.png" class="shape hexagon">
+                    <img src="./assets/red-circle.png" class="shape circle red-circle">
                 </div>
             </div>
             <div id="window-container">
