fixed X scroll, added view work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Calistoga&display=swap" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
     <title>Portfolio Working</title>
 </head>
@@ -82,7 +82,23 @@
                                 <div class="menu-bar"></div>
                             </div>
                         </div>
-                        <div class="window-content"></div>
+                        <div class="window-content">
+                            <div class="grid-bg">
+                                <div class="block one"></div>
+                                <div class="block two"></div>
+                                <div class="block three"></div>
+                                <div class="block four"></div>
+                                <div class="block five"></div>
+                                <div class="block six"></div>
+                                <div class="block seven"></div>
+                                <div class="block eight"></div>
+                                <div class="block nine"></div>
+                            </div>
+                            <div id="enter">
+                                <h2>View</h2>
+                                <h2>Work</h2>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
