added header elements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <title>Portfolio Working</title>
 </head>
 <body>
+    <header>
+        <img id="languages" src="./assets/language-logos.png" alt="My Languages: HTML, CSS, and JavaScript">
+        <div id="email-popup">
+            <div id="contact">
+                <img id="mail" src="./assets/mail-icon.png" alt="mail icon">
+                <a href="https://github.com/HelloGonzo" target="_blank"><img id="git" src="./assets/github-icon.png" alt="github icon"></a>
+            </div>
+            <div id="email" class="popup">
+                <p>elenabrosseau@gmail.com</p>
+            </div>
+            <!--<div id="github" class="popup">
+                <p>github.com/HelloGonzo</p>
+            </div>-->
+        </div>
+    </header>
     <main>
         <div id="grid">
             <div id="name-plate">
@@ -95,8 +110,10 @@
                                 <div class="block nine"></div>
                             </div>
                             <div id="enter">
-                                <h2>View</h2>
-                                <h2>Work</h2>
+                                <a href="./pages/projects.html">
+                                    <h2>View</h2>
+                                    <h2>Work</h2>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -104,5 +121,6 @@
             </div>
         </div>
     </main>
+    <script src="./scripts.js"></script>
 </body>
 </html>
