--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Calistoga&display=swap" rel="stylesheet">
     <link href="./test.css" rel="stylesheet">
-    <title>Test</title>
+    <title>test</title>
 </head>
 <body>
     <main>
@@ -82,7 +82,25 @@
                                 <div class="menu-bar"></div>
                             </div>
                         </div>
-                        <div class="window-content"></div>
+                        <div class="window-content">
+                            <div class="grid-bg">
+                                <div class="block one"></div>
+                                <div class="block two"></div>
+                                <div class="block three"></div>
+                                <div class="block four"></div>
+                                <div class="block five"></div>
+                                <div class="block six"></div>
+                                <div class="block seven"></div>
+                                <div class="block eight"></div>
+                                <div class="block nine"></div>
+                            </div>
+                            <div id="enter">
+                                <a href="./pages/projects.html">
+                                    <h2>View</h2>
+                                    <h2>Work</h2>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
