header fixes, added copy button

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <div id="email-popup">
             <div id="contact">
                 <img id="mail" src="./assets/mail-icon.png" alt="mail icon">
-                <a href="https://github.com/HelloGonzo" target="_blank"><img id="git" src="./assets/github-icon.png" alt="github icon"></a>
+                <a href="https://github.com/HelloGonzo" target="_blank"><img id="git" src="./assets/github-icon.png" alt="github icon" title="github.com/HelloGonzo"></a>
             </div>
             <div id="email" class="popup">
-                <p>elenabrosseau@gmail.com</p>
+                <p id="copy-email">elenabrosseau@gmail.com</p>
+                <img id="copy-btn" src="http://clipground.com/images/copy-4.png" 
+          title="Click to Copy"
+      >
             </div>
             <!--<div id="github" class="popup">
                 <p>github.com/HelloGonzo</p>
